// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardsList should render nothing if no items are provided 1`] = `
<div>
  <div
    class="container"
  />
</div>
`;

exports[`CardsList should render the cards list properly 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="itemWrapper"
    >
      <div
        class="container small"
      >
        5
      </div>
    </div>
  </div>
</div>
`;
